fix: making row gap in app features bigger

--- a/src/styles/components/sections/_app-features.scss
+++ b/src/styles/components/sections/_app-features.scss
@@ -7,7 +7,8 @@
     gap: 1rem;
 
     @include tablet {
-      gap: 2rem;
+      column-gap: 2rem;
+      row-gap: 3rem;
       grid-template-columns: repeat(2, 300px);
     }
     @include desktop {
@@ -22,7 +23,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 1rem;
+      column-gap: 1rem;
       img {
         max-height: 2rem;
       }
